Fix (#34) - Alignment issues

--- a/MvcWebRole1/Content/custom.css
+++ b/MvcWebRole1/Content/custom.css
@@ -27,6 +27,7 @@
 .gallery-image {
     float: left;
     padding: 5px;
+    padding-top: 0px;
 }
 
 .team-item {
@@ -40,7 +41,7 @@
 
 .movie-list, .news-container, .critics-container, .upcoming-movie-list {
     float: left;
-    margin-left: 7%;
+    /*margin-left: 7%;*/
     width: 93%;
     margin-bottom: 20px;
 }
@@ -74,13 +75,13 @@
         height: 400px;
     }
     .tile-type-0 ul li {
-        width: 23%;
+        width: 24%;
         min-height: 380px;
+        margin-right: 1%;
     }
 
 .critics-container {
-    width: 88%;
-    margin-left: 12%;
+    width: 100%;
 }
 
     .critics-container ul {
@@ -122,7 +123,7 @@
 }
 @media screen and (min-width: 321px) and (max-width: 900px) {
     .movie-list, .upcoming-movie-list {
-        margin-left: 7%;
+        /*margin-left: 7%;*/
     }
 
         .movie-list ul li, .upcoming-movie-list ul li {
