--- a/MvcWebRole1/Content/styles/mm.critics.css
+++ b/MvcWebRole1/Content/styles/mm.critics.css
@@ -145,7 +145,7 @@
 
 @media screen and (min-width: 321px) and (max-width: 1350px) {
     .critics-container {
-        margin-left: 7%;
+        /*margin-left: 7%;*/
         height: auto;
     }
 }
@@ -164,7 +164,7 @@
 
 @media screen and (max-width: 320px) {
     .critics-container {
-        margin-left: 7%;
+        /*margin-left: 7%;*/
         width: 90%;
     }
 
