--- a/MvcWebRole1/Content/styles/mm.moviedetails.css
+++ b/MvcWebRole1/Content/styles/mm.moviedetails.css
@@ -57,8 +57,8 @@ div.captionAndNavigate {
 .artist-bio {
     float: left;
     width: 85%;
-    margin-left: 6%;
-    margin-top: 20px;
+    /*margin-left: 6%;
+    margin-top: 20px;*/
 }
 
 /* Movie Description */
