--- a/MvcWebRole1/Content/styles/mm.review.css
+++ b/MvcWebRole1/Content/styles/mm.review.css
@@ -23,7 +23,7 @@
     width: 30%;
     height: 250px;
     margin-right: 2%;
-    margin-top: 2%;
+    /*margin-top: 2%;*/
     float: left;
     min-width: 400px;
     background-color: white;
