--- a/MvcWebRole1/Content/styles/mm.reviewer.css
+++ b/MvcWebRole1/Content/styles/mm.reviewer.css
@@ -1,7 +1,7 @@
 ﻿.review-list {
     float: left;
     width: 86%;
-    margin-left: 7%;
+    /*margin-left: 7%;*/
 }
 
     .review-list ul {
